<resources>
    <string name="app_name">TVMS</string>
    <string name="title_activity_home_page">home_page</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_violation">Violation Record</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_penalties">Violation and Penalties</string>
    <string name="menu_emergency">Emergency Hotlines</string>
    <string name="menu_share">Share</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
