<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_violation"
            android:icon="@drawable/ic_error_outline_black_24dp"
            android:title="@string/menu_violation" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_penalties"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/menu_penalties" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_settings_phone_black_24dp"
            android:title="@string/menu_emergency" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
